fix: Date placeholder out of bound iphone

--- a/src/shared/app/calendar/component/CalendarDatePicker.css
+++ b/src/shared/app/calendar/component/CalendarDatePicker.css
@@ -3,18 +3,6 @@
   width: 100%;
 }
 
-.datePlaceholder {
-  position: absolute;
-  top: 12px;
-  left: 12px;
-  z-index: 2;
-
-  color: #9b9a9a;
-  font-size: 14px;
-
-  pointer-events: none;
-}
-
 .closeBtn {
   position: absolute;
   left: 150px;
